--- a/Cursos/Curso - Introdução a criação de websites com HTML5 e CSS3/index.html
+++ b/Cursos/Curso - Introdução a criação de websites com HTML5 e CSS3/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		    <meta>
-		    <title> Meu nome </title>
+	    <meta charset="utf-8">
+	    <title>Matheus Ferreira</title>
 	</head>
     <body>
-    Matheus Ferreira
+        <header>
+            <img alt="Foto de Matheus Ferreira" height="200" width="150" src="/img/matheus.jpg">
+            <h1>Matheus Ferreira</h1>
+        </header>
+        <section>
+            <header>
+                <h2>Posts</h2>
+            </header>
+            <article>
+                <header>
+                    <h3>Post #1</h3>
+                    <img alt="Editor de texto com HTML" height="360" src="/img/html.jpg">
+                </header>
+                <p>
+                    <a target="_blank" href="https://mussumipsum.com">Mussum Ipsum</a>, cacilds vidis litro abertis. Casamentiss faiz malandris se pirulitá.Sapien in monti palavris qui num significa nadis i pareci latim.Cevadis im ampola pa arma uma pindureta.Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis.
+                </p>
+            </article>
+        </section>
+        <footer>
+            <ul>
+                <li>
+                    <a href="mailto:matheus.carvalho37@fatec.sp.gov.br">Matheus.carvalho37@fatec.sp.gov.br</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/matheus-fcarvalho/" target="_blank">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="https://github.com/Nekerxd" target="_blank">GitHub</a>
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
