--- a/Cursos/Curso - Construindo páginas para internet com Bootstrap/index.html
+++ b/Cursos/Curso - Construindo páginas para internet com Bootstrap/index.html
@@ -23,6 +23,12 @@
                         <a class="nav-link" href="#servicos">Serviços</a>
                     </li>
             </div>
+            <div class="container-fluid">
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-sucess" type="submit">Search</button>
+                </form>
+            </div>
             </ul>
         </nav>
         <section id="quemsomos">
@@ -38,46 +44,50 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4">
-                            <img src="/img/dio.png" width="80%">
+                            <a target="_blank" href="https://www.microsoft.com/pt-br"><img src="/img/microsoft-logo.png" width="80%"></a>
                         </div>
                         <div class="col-lg-4">
-                            <img src="/img/dio.png" width="80%">
+                            <a target="_blank" href="https://www.google.com.br/"><img src="/img/google-logo.png" width="80%"></a>
                         </div>
                         <div class="col-lg-4">
-                            <img src="/img/dio.png" width="80%">
+                            <a target="_blank" href="https://www.ibm.com/br-pt"><img src="/img/ibm-logo.png" width="80%"></a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
+        <section id="sep1">
+        </section>
         <section id="servicos">
-            <div class="container-fluid text-center margin servicos">
-                <h3 class="margin">Serviços</h3>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <p class="justify">Mussum Ipsum, cacilds vidis litro abertis. Não sou faixa preta cumpadi, sou preto inteiris, inteiris.Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.
-                                </p>
-                            <img src="/img/screen_side.jpg" width="100%">
-                        </div>
-                        <div class="col-lg-4">
-                            <p class="justify">Mussum Ipsum, cacilds vidis litro abertis. Interagi no mé, cursus quis, vehicula ac nisi.Detraxit consequat et quo num tendi nada.Quem num gosta di mé, boa gentis num é.Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.
-                                </p>
-                            <img src="/img/desk.jpg" width="100%">
-                        </div>
-                        <div class="col-lg-4">
-                            <p class="justify">Mussum Ipsum, cacilds vidis litro abertis. Si num tem leite então bota uma pinga aí cumpadi!Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget.Per aumento de cachacis, eu reclamis.Quem num gosta di mé, boa gentis num é.
-                                </p>
-                            <img src="/img/note_html.jpg" width="100%">
+                <div class="container-fluid text-center margin servicos">
+                    <h3 class="margin">Serviços</h3>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <p class="justify">Mussum Ipsum, cacilds vidis litro abertis. Não sou faixa preta cumpadi, sou preto inteiris, inteiris.Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.
+                                    </p>
+                                <img src="/img/screen_side.jpg" width="100%">
+                            </div>
+                            <div class="col-lg-4">
+                                <p class="justify">Mussum Ipsum, cacilds vidis litro abertis. Interagi no mé, cursus quis, vehicula ac nisi.Detraxit consequat et quo num tendi nada.Quem num gosta di mé, boa gentis num é.Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.
+                                    </p>
+                                <img src="/img/desk.jpg" width="100%">
+                            </div>
+                            <div class="col-lg-4">
+                                <p class="justify">Mussum Ipsum, cacilds vidis litro abertis. Si num tem leite então bota uma pinga aí cumpadi!Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget.Per aumento de cachacis, eu reclamis.Quem num gosta di mé, boa gentis num é.
+                                    </p>
+                                <img src="/img/note_html.jpg" width="100%">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
         
-        <footer class="container-fluid text-center bg-footer margin">
+        <footer class="container-fluid padding text-center bg-footer margin">
             <p>Desenvolvido por Matheus Ferreira</p>
+            <a target="_blank" href="https://br.linkedin.com/in/matheus-fcarvalho"><button type="button" class="btn btn-dark">LinkedIn</button></a>
+            <a href="mailto:matheus.carvalho37@fatec.sp.gov.br"><button type="button" class="btn btn-dark">E-mail</button></a>
+            <a target="_blank" href="https://github.com/Nekerxd"><button type="button" class="btn btn-dark">GitHub</button></a>
         </footer>
     </body>
 </html>
