Atualização dos arquivos

--- a/Cursos/Curso - Introdução a criação de websites com HTML5 e CSS3/index.html
+++ b/Cursos/Curso - Introdução a criação de websites com HTML5 e CSS3/index.html
@@ -7,9 +7,17 @@
 	</head>
     <body>
         <header class="start">
+            <div class="topnav">
+                <a class="active" href="#inicio">Início</a>
+                <a href="#sobre">Sobre</a>
+                <a href="#contato">Contato</a>
+                <input type="text" placeholder="Pesquisar...">
+            </div>
             <img class="photo" alt="Foto de Matheus Ferreira" src="/img/matheus.jpg">
             <h1 id="title">Matheus Ferreira</h1>
         </header>
+        <section>
+        </section>
         <section>
             <header>
                 <h2 class="subtitle">Curso - Introdução a criação de websites com HTML5 e CSS3</h2>
